trunk/Archive2/6a/d9a828b6afe6b4/output
clang version 3.4 (tags/RELEASE_34/final 206911)
Target: x86_64-unknown-linux-gnu
Thread model: posix
main.cpp:24:7: error: member initializer 'RVN_t' does not name a non-static data member or base class
    : RVN_t(t)
      ^~~~~~~~
1 error generated.
